many changes in and fixes dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply text-black dark:bg-gray-900 dark:text-white;
+    @apply text-black dark:bg-zinc-800 dark:text-white;
   }
 
   .h1 {
@@ -21,5 +21,6 @@
 }
 
 .tabs-trigger {
-  @apply bg-[#232329] w-[365px] py-[10px] hover:bg-gray-800;
+  @apply bg-gray-700 w-[365px] py-[12px] hover:bg-gray-600 text-lg
+  dark:bg-stone-700 dark:hover:bg-stone-600 transition-all duration-200;
 }
